<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/GenericFormControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_game"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variation"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <RadioGroup
            android:id="@+id/variation"
            style="@style/GenericFormControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/forced_radio"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/forced_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forced" />

            <RadioButton
                android:id="@+id/mixed_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxi" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <LinearLayout
            android:id="@+id/players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="first_name"
                android:hint="@string/player_name"
                android:inputType="text"
                android:tag="@string/player_edit_tag" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="first_name"
                android:hint="@string/player_name"
                android:inputType="text"
                android:tag="@string/player_edit_tag" />

        </LinearLayout>

        <Button
            android:id="@+id/add_player_button"
            style="@style/GenericFormControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_player" />

        <Button
            android:id="@+id/start_game_button"
            style="@style/GenericFormControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game" />

    </LinearLayout>
</ScrollView>
