<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints="first_name"
        android:hint="@string/player_name"
        android:inputType="text"
        android:tag="@string/player_edit_tag" />

    <ImageButton
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:contentDescription="@string/remove_player"
        android:src="@drawable/ic_baseline_remove_24" />
</LinearLayout>
